@@ -8,6 +8,7 @@
 - アプリケーションの最終処理を行うメソッドとして、Ethna_Controller#end を追加
 - デフォルトの smarty プラグイン よりも Controller の plugins ディレクトリに定義されたプラグインを優先させるように変更
 - フィルタを一貫してプラグインから取得するように変更
+- フォーム定義を「'def' => array(),」 と定義しなくても、「'def',」 と定義するだけで親のフォームテンプレートの定義を補うようにした (thanks: sotarok)
 - フォーム定義を多次元配列に対応させました (thanks: id:syachi5150)
 -- http://d.hatena.ne.jp/syachi5150/20081022/1224676038
 - フォームヘルパの動作を改善
